Update homepage in package.json and format _redirects file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "car-rental",
-  "homepage": "https://anantnipunge.github.io/shiv_tours_and_travels",
+  "homepage": ".",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
